--- a/src/csr/csr.html
+++ b/src/csr/csr.html
@@ -1,7 +1,5 @@
 <!doctype html>
-<html lang="en">
-  <head>
-  </head>
+<html>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/csr/entry-csr.jsx"></script>
